--- a/libs/console/css/layout.css
+++ b/libs/console/css/layout.css
@@ -11,6 +11,8 @@ body {
     background: #444;
     color: #fff;
     font-family: 'Quicksand', 'Arial Narrow', Arial, sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 a, a:visited {
@@ -57,25 +59,60 @@ a, a:visited {
     text-align: right;
 }
 
-.main-panel .main {
-    position: absolute;
-    top: 60px;
+/* Main Layout */
+.container {
+    position: fixed;
+    top: 0;
     right: 0;
-    bottom: 0;
     left: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    bottom: 0;
 }
 
-    .main-panel .main .notice {
-        padding: 15px 50px;
+.hazaar-layout {
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    height: 100%;
+}
+
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    background-color: #333;
+    min-width: 250px;
+}
+
+.main-panel {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+    .main-panel .main-topbar {
+        height: 60px;
+        background: #554d7c;
     }
 
-    .main-panel .main .main-content {
-        overflow-y: auto;
-        flex: 1;
+    .main-panel .main {
+        display: flex;
+        flex-grow: 1;
+        flex-direction: column;
+        justify-content: flex-start;
     }
+
+        .main-panel .main .notice {
+            padding: 15px 50px;
+        }
+
+        .main-panel .main .main-content {
+            overflow-y: auto;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+        }
 
 .row {
     display: flex;
@@ -83,63 +120,100 @@ a, a:visited {
 }
 
     .row.row-full {
-        height: 100%;
+        flex-grow: 1;
     }
 
     .row .col {
         display: flex;
         flex-direction: column;
+        flex-grow: 1;
         padding: 15px;
         box-sizing: border-box;
     }
 
-    .row .col-1 {
-        flex: 1;
-    }
+.col-1 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 8.3333333333%;
+    flex: 0 0 8.3333333333%;
+    max-width: 8.3333333333%;
+}
 
-    .row .col-2 {
-        flex: 2;
-    }
+.col-2 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 16.6666666667%;
+    flex: 0 0 16.6666666667%;
+    max-width: 16.6666666667%;
+}
 
-    .row .col-3 {
-        flex: 3;
-    }
+.col-3 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 25%;
+    flex: 0 0 25%;
+    max-width: 25%;
+}
 
-    .row .col-4 {
-        flex: 4;
-    }
+.col-4 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 33.3333333333%;
+    flex: 0 0 33.3333333333%;
+    max-width: 33.3333333333%;
+}
 
-    .row .col-5 {
-        flex: 5;
-    }
+.col-5 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 41.6666666667%;
+    flex: 0 0 41.6666666667%;
+    max-width: 41.6666666667%;
+}
 
-    .row .col-6 {
-        flex: 6;
-    }
+.col-6 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+}
 
-    .row .col-7 {
-        flex: 7;
-    }
+.col-7 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 58.3333333333%;
+    flex: 0 0 58.3333333333%;
+    max-width: 58.3333333333%;
+}
 
-    .row .col-8 {
-        flex: 8;
-    }
+.col-8 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 66.6666666667%;
+    flex: 0 0 66.6666666667%;
+    max-width: 66.6666666667%;
+}
 
-    .row .col-9 {
-        flex: 9;
-    }
+.col-9 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 75%;
+    flex: 0 0 75%;
+    max-width: 75%;
+}
 
-    .row .col-10 {
-        flex: 10;
-    }
+.col-10 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 83.3333333333%;
+    flex: 0 0 83.3333333333%;
+    max-width: 83.3333333333%;
+}
 
-    .row .col-11 {
-        flex: 11;
-    }
+.col-11 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 91.6666666667%;
+    flex: 0 0 91.6666666667%;
+    max-width: 91.6666666667%;
+}
 
-    .row .col-12 {
-        flex: 12;
-    }
+.col-12 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
 
 
 /*
@@ -165,44 +239,29 @@ a, a:visited {
 /*
  * Sidebar
  */
-.sidebar {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 250px;
-    z-index: 1000;
-    display: block;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #333;
+.sidebar .sidebar-header {
+    background: #2d2d2d;
+    font-family: 'Julius Sans One', 'Arial Narrow', Arial, sans-serif;
 }
 
-    .sidebar .sidebar-header {
-        background: #2d2d2d;
+    .sidebar .sidebar-header .sidebar-logo {
         float: left;
-        width: 100%;
-        font-family: 'Julius Sans One', 'Arial Narrow', Arial, sans-serif;
+        margin: 10px 10px 10px 25px;
+        height: 40px;
+        width: 40px;
+        background-image: url(../images/hazaar-icon-white.png);
+        background-size: contain;
+        background-repeat: no-repeat;
     }
 
-        .sidebar .sidebar-header .sidebar-logo {
-            float: left;
-            margin: 10px 10px 10px 25px;
-            height: 40px;
-            width: 40px;
-            background-image: url(../images/hazaar-icon-white.png);
-            background-size: contain;
-            background-repeat: no-repeat;
-        }
-
-        .sidebar .sidebar-header .sidebar-brand {
-            text-decoration: none;
-            color: #fff;
-            display: block;
-            padding: 0 15px;
-            line-height: 60px;
-            text-align: center;
-        }
+    .sidebar .sidebar-header .sidebar-brand {
+        text-decoration: none;
+        color: #fff;
+        display: block;
+        padding: 0 15px;
+        line-height: 60px;
+        text-align: center;
+    }
 
 .sidebar-logo img {
     display: block;
@@ -223,8 +282,6 @@ a, a:visited {
     Sidebar User info
 */
 .sidebar-user-info {
-    float: left;
-    width: 100%;
     padding: 30px;
     color: #fff;
     font-size: 12px;
@@ -249,97 +306,72 @@ a, a:visited {
 /**
     Sidebar menus
 */
-.sidebar ul {
-    color: #fff;
-    margin: 0;
-    font-size: 13px;
+.sidebar-nav {
+    flex-grow: 1;
+    box-shadow: 0 0 2px rgba(0,0,0,0.3);
+}
+
+.nav-menu {
     list-style: none;
     padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
-.sidebar-nav,
-.sidebar-nav-item,
-.sidebar-nav-items,
-.sidebar-nav-module a {
-    float: left;
-    width: 100%;
-    text-decoration: none;
-}
+    .nav-menu > .nav-item {
+        width: 100%;
+    }
 
-.sidebar-nav-module a {
-    padding: 15px;
-    border-left: 7px solid transparent;
-    font-size: 14px;
-    color: #fff;
-}
-
-    .sidebar-nav-module a:hover {
+    .nav-menu .nav-item > .nav-link {
+        padding: .5rem;
+        width: 100%;
+        display: block;
+        color: #fff;
         text-decoration: none;
+        border-left: 5px solid transparent;
+    }
+
+        .nav-menu .nav-item > .nav-link:hover {
+            color: #ea6710;
+            background-color: #2e2e2e;
+        }
+
+        .nav-menu .nav-item > .nav-link > i.fa {
+            width: 1rem;
+            text-align: center;
+            margin-right: 0.5rem;
+        }
+
+    .nav-menu .nav-item.selected > .nav-link {
+        border-left: 5px solid #554d7c;
         background-color: #444;
-        border-left-color: #554d7c;
     }
 
-    .sidebar-nav-module a > i.fa,
-    .sidebar-nav-item .sidebar-nav-items li a > i.fa {
-        width: 2em;
-        text-align: center;
-    }
-
-    .sidebar-nav-module a > i.fa,
-    .sidebar-nav-module a > span.fa-stack {
-        margin-right: 10px;
-    }
-
-.sidebar-nav-item.selected {
-    background: #4a4a4a;
-}
-
-    .sidebar-nav-item.selected > a {
-        background: #444;
-        border-left-color: #554d7c;
-    }
-
-.sidebar-nav-item .sidebar-nav-items {
+nav > .nav-menu > .nav-item > .nav-menu {
+    font-size: 90%;
     display: none;
+    background-color: #393939;
 }
 
-.sidebar-nav-item.selected .sidebar-nav-items {
-    display: block;
+nav > .nav-menu > .nav-item.selected > .nav-menu {
+    display: flex;
 }
 
-
-.sidebar-nav-item .sidebar-nav-items li a {
-    width: 100%;
-    box-sizing: border-box;
+.nav-menu > .nav-item > .nav-menu > .nav-item > .nav-link {
+    padding-left: 2rem;
 }
 
-    .sidebar-nav-item li a .suffix {
-        float: right;
-        padding: 0 8px;
-        border-radius: 3px;
-        min-width: 16px;
-        text-align: center;
-    }
-
-/**
-    Main Panel
-*/
-.main-panel {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 250px;
+.nav-menu > .nav-item > .nav-menu > .nav-item > .nav-menu > .nav-item > .nav-link {
+    padding-left: 3rem;
 }
 
-    .main-panel .main-topbar {
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        height: 60px;
-        background: #554d7c;
-    }
+.nav-menu > .nav-item > .nav-link .suffix {
+    float: right;
+    padding: .15rem .5rem;
+    border-radius: 2px;
+    font-size: .8rem;
+}
 
 /**
     Top Navbar
@@ -409,7 +441,7 @@ a, a:visited {
 .panel {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    flex-grow: 1;
     background-color: #fff;
     color: #333;
     box-shadow: 1px 1px 16px rgba(0,0,0,0.3);
@@ -427,7 +459,7 @@ a, a:visited {
     }
 
     .panel .panel-content {
-        flex: 1;
+        flex-grow: 1;
     }
 
     .panel > h1, .panel > h2, .panel > h3, .panel > h4 {
@@ -471,7 +503,7 @@ a, a:visited {
     }
 
         .panel.panel-full .panel-content {
-            flex: 1;
+            flex-grow: 1;
         }
 
 table.table,
@@ -668,3 +700,84 @@ canvas.metrics {
         max-width: 100%;
         mix-blend-mode: difference;
     }
+
+/* Flex Layout */
+.flex {
+    display: flex;
+}
+
+.flex-col {
+    flex-direction: column;
+}
+
+.flex-row {
+    flex-direction: row;
+}
+
+.flex-grow-0 {
+    flex-grow: 0;
+}
+
+.flex-grow-1 {
+    flex-grow: 1;
+}
+
+.flex-grow-2 {
+    flex-grow: 2;
+}
+
+.flex-grow-3 {
+    flex-grow: 3;
+}
+
+.flex-grow-4 {
+    flex-grow: 4;
+}
+
+.flex-shrink-0 {
+    flex-shrink: 0;
+}
+
+.flex-shrink-1 {
+    flex-shrink: 1;
+}
+
+.flex-shrink-2 {
+    flex-shrink: 2;
+}
+
+.flex-shrink-3 {
+    flex-shrink: 3;
+}
+
+.flex-shrink-4 {
+    flex-shrink: 4;
+}
+
+.justify-content-start {
+    justify-content: flex-start !important;
+}
+
+.justify-content-end {
+    justify-content: flex-end !important;
+}
+
+.justify-content-center {
+    justify-content: center !important;
+}
+
+.justify-content-between {
+    justify-content: space-between !important;
+}
+
+.justify-content-around {
+    justify-content: space-around !important;
+}
+
+/* Input Classes */
+input {
+}
+
+textarea {
+    width: 100%;
+}
