--- a/libs/console/layout.phtml
+++ b/libs/console/layout.phtml
@@ -10,66 +10,64 @@
 
 </head>
 <body>
-
-    <div class="hazaar-layout">
-        <div class="sidebar">
-
-            <div class="sidebar-header">
-                <div class="sidebar-logo"></div>
-                <a class="sidebar-brand" href="<?=$this->url();?>">
-                    Hazaar Admin
-                </a>
-                <div class="sidebar-sub" title="APPLICATION_ENV">
-                    <?=APPLICATION_ENV;?>
+    <div class="container">
+        <div class="hazaar-layout">
+            <div class="sidebar">
+                <div class="sidebar-header">
+                    <div class="sidebar-logo"></div>
+                    <a class="sidebar-brand" href="<?=$this->url();?>">
+                        Hazaar Admin
+                    </a>
+                    <div class="sidebar-sub" title="APPLICATION_ENV">
+                        <?=APPLICATION_ENV;?>
+                    </div>
                 </div>
-            </div>
-
-            <div class="sidebar-user-info">
-                <?=$this->html->i()->class('fa fa-user-circle fa-4x sidebar-user-img');?>
-                <div class="sidebar-user-name">
-                    <?=$this->user['fullname'];?>
+                <div class="sidebar-user-info">
+                    <?=$this->html->i()->class('fa fa-user-circle fa-4x sidebar-user-img');?>
+                    <div class="sidebar-user-name">
+                        <?=$this->user['fullname'];?>
+                    </div>
+                    <div class="sidebar-user-role">
+                        <?=$this->user['group'];?>
+                    </div>
                 </div>
-                <div class="sidebar-user-role">
-                    <?=$this->user['group'];?>
+                <nav class="sidebar-nav">
+                    <?=$this->partial('menu', array('items' => $this->navitems));?>
+                </nav>
+            </div>
+            <div class="main-panel">
+                <div class="main-topbar">
+                    <div class="main-label">
+                        <?=$this->getActiveMenu();?>
+                    </div>
+                    <ul class="navbar navbar-right navbar-buttons">
+                        <li>
+                            <a href="<?=$this->application->url();?>" target="_blank">
+                                <i class="fa fa-undo"></i>
+                                Back to App
+                            </a>
+                        </li>
+                        <li>
+                            <a href="<?=$this->url('logout');?>">
+                                <i class="fa fa-sign-out"></i>
+                                Logout
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-            </div>
+                <div class="main">
+                    <?php
+                    if(is_array($this->notices)){
+                        foreach($this->notices as $notice)
+                            echo $this->html->div(array(
+                                $this->html->i()->class('fa fa-' . ake($notice, 'icon', 'bell')),
+                                ake($notice, 'msg')
+                            ))->class(trim('notice ' . ake($notice, 'class')));
 
-            <div class="sidebar-nav">
-                <?=$this->partial('menu', array('items' => $this->navitems));?>
-            </div>
-        </div>
-        <div class="main-panel">
-            <div class="main-topbar">
-                <div class="main-label">
-                    <?=$this->getActiveMenu();?>
-                </div>
-                <ul class="navbar navbar-right navbar-buttons">
-                    <li>
-                        <a href="<?=$this->application->url();?>" target="_blank">
-                            <i class="fa fa-undo"></i>
-                            Back to App
-                        </a>
-                    </li>
-                    <li>
-                        <a href="<?=$this->url('logout');?>">
-                            <i class="fa fa-sign-out"></i>
-                            Logout
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="main">
-                <?php
-                if(is_array($this->notices)){
-                    foreach($this->notices as $notice)
-                        echo $this->html->div(array(
-                            $this->html->i()->class('fa fa-' . ake($notice, 'icon', 'bell')),
-                            ake($notice, 'msg')
-                        ))->class(trim('notice ' . ake($notice, 'class')));
-
-                } ?>
-                <div class="main-content">
-                    <?=$this->layout();?>
+                    } ?>
+                    <div class="main-content">
+                        <?=$this->layout();?>
+                    </div>
                 </div>
             </div>
         </div>
