Console: Started adding basic MVC file management
Currently just lists the model, view and controller files.

--- a/libs/console/application/controllers.phtml
+++ b/libs/console/application/controllers.phtml
@@ -1,1 +1,11 @@
-<h1>Controllers</h1>
+
+<div class="row">
+    <div class="col">
+        <div class="panel">
+            <div class="panel-header">Controllers</div>
+            <div class="panel-content">
+                <?=$this->partial('mvc_items', array('items' => $this->controllers));?>
+            </div>
+        </div>
+    </div>
+</div>
