--- a/libs/console/application/models.phtml
+++ b/libs/console/application/models.phtml
@@ -1,1 +1,11 @@
-<h1>Models</h1>
+
+<div class="row">
+    <div class="col">
+        <div class="panel">
+            <div class="panel-header">Models</div>
+            <div class="panel-content">
+                <?=$this->partial('mvc_items', array('items' => $this->models));?>
+            </div>
+        </div>
+    </div>
+</div>
