Added timestamp to other error output

--- a/libs/error/error.phtml
+++ b/libs/error/error.phtml
@@ -39,6 +39,12 @@
                     <?=APPLICATION_ENV;?>
                 </div>
 
+                <h2>Timestamp:</h2>
+
+                <div>
+                    <?=date('c');?>
+                </div>
+
                 <?php endif; ?>
             </div>
 
