Fixed up the console login screen

--- a/libs/console/login.phtml
+++ b/libs/console/login.phtml
@@ -38,12 +38,18 @@
 
             <p class="login-text">Unauthorised access is prohibited.</p>
 
-            <div class="form-group">
-                <input type="text" id="inputUser" name="username" placeholder="&#61447; user name" required autofocus />
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <i class="fas fa-user"></i>
+                </div>
+                <input type="text" id="inputUser" name="username" placeholder="Username" required autofocus />
             </div>
 
-            <div class="form-group">
-                <input type="password" id="inputPassword" name="password" placeholder="&#61572; Password" required />
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <i class="fas fa-key"></i>
+                </div>
+                <input type="password" id="inputPassword" name="password" placeholder="Password" required />
             </div>
 
             <button class="btn btn-lg btn-hazaar btn-block" type="submit">Sign in</button>
