--- a/libs/console/css/login.css
+++ b/libs/console/css/login.css
@@ -101,18 +101,30 @@ h1, h2, h3, h4, h5, h6 {
     height: 64px;
 }
 
-.form-group {
-    margin-bottom: 0;
+.input-group {
     border: 1px solid #d9d9d9;
     margin-bottom: 35px;
-    padding: 15px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
 }
 
-    .form-group input {
+    .input-group .input-group-prepend {
+        width: 3.6rem;
+        line-height: 3rem;
+        text-align: center;
+        background: #eee;
+        color: rgba(0,0,0,0.3);
+        border-right: 1px solid #d9d9d9;
+    }
+
+    .input-group input {
         outline: none;
         border: none;
-        font: normal normal normal 14px/1 FontAwesome, "Raleway", sans-serif;
+        font-family: "Raleway", sans-serif;
         font-size: 16px;
+        width: 100%;
+        padding: .75rem 1rem;
     }
 
 input:-webkit-autofill {
@@ -128,3 +140,18 @@ input:-webkit-autofill {
     text-align: center;
     border: 1px solid rgba(255,255,255,0.1);
 }
+
+@media only screen and (max-width: 600px) {
+    .container {
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      transform: none;
+    }
+    .container form {
+        margin: 0;
+        width: auto;
+        height: auto;
+    }
+  }
