--- a/libs/console/index.phtml
+++ b/libs/console/index.phtml
@@ -205,7 +205,7 @@ $memory_peak = bytes_str(memory_get_peak_usage());
                         <tr>
                             <td>
                                 <div class="text-small">
-                                    <?=$this->html->a($lib['homepage'], $lib['name'])->target('_blank');?>
+                                    <?=$this->html->a(ake($lib, 'homepage', '#'), $lib['name'])->target('_blank');?>
                                 </div>
                                 <div class="text-xsmall">
                                     <?=$lib['description'];?>
