--- a/libs/css/filebrowser.css
+++ b/libs/css/filebrowser.css
@@ -554,13 +554,20 @@
 
     .fb-container > .fb-main > .fb-layout > .fb-items > .fb-items-loading {
         background: url(images/loading.gif) no-repeat center center;
-        width: 100%;
-        height: 100%;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
     }
 
-    .fb-container > .fb-main:empty:after {
-        display: block;
-        width: 100%;
+    .fb-container > .fb-main > .fb-layout > .fb-items:empty:after {
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
         padding: 50px 0;
         text-align: center;
         vertical-align: middle;
