Round #1 of replacing array()

--- a/libs/console/application/controllers.phtml
+++ b/libs/console/application/controllers.phtml
@@ -4,7 +4,7 @@
         <div class="panel">
             <div class="panel-header">Controllers</div>
             <div class="panel-content">
-                <?=$this->partial('mvc_items', array('items' => $this->controllers));?>
+                <?=$this->partial('mvc_items', ['items' => $this->controllers]);?>
             </div>
         </div>
     </div>
