--- a/libs/console/application/models.phtml
+++ b/libs/console/application/models.phtml
@@ -4,7 +4,7 @@
         <div class="panel">
             <div class="panel-header">Models</div>
             <div class="panel-content">
-                <?=$this->partial('mvc_items', array('items' => $this->models));?>
+                <?=$this->partial('mvc_items', ['items' => $this->models]);?>
             </div>
         </div>
     </div>
