--- a/libs/error/error.phtml
+++ b/libs/error/error.phtml
@@ -172,7 +172,7 @@
                                 $config = ake($this->err, 'config', []);
 
                                 foreach($config as $key => $value)
-                                    echo $this->html->tr(array($this->html->td($key), $this->html->td($value)));
+                                    echo $this->html->tr([$this->html->td($key), $this->html->td($value)]);
 
                             ?>
                         </tbody>
