--- a/libs/console/application/views.phtml
+++ b/libs/console/application/views.phtml
@@ -4,7 +4,7 @@
         <div class="panel">
             <div class="panel-header">Views</div>
             <div class="panel-content">
-                <?=$this->partial('mvc_items', array('items' => $this->views));?>
+                <?=$this->partial('mvc_items', ['items' => $this->views]);?>
             </div>
         </div>
     </div>
