Updated hazaar.io domain links.

--- a/tests/application/views/application.phtml
+++ b/tests/application/views/application.phtml
@@ -49,9 +49,9 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-header">Documentation</li>
-                        <li><?=$this->html->a('http://www.hazaarmvc.com', 'Hazaar MVC Website'); ?></li>
-                        <li><?=$this->html->a('http://www.hazaarmvc.com/docs', 'Online Documentation'); ?></li>
-                        <li><?=$this->html->a('http://www.hazaarmvc.com/docs/page/api', 'API Reference'); ?></li>
+                        <li><?=$this->html->a('http://hazaar.io', 'Hazaar MVC Website'); ?></li>
+                        <li><?=$this->html->a('https://scroly.io/hazaarmvc', 'Online Documentation'); ?></li>
+                        <li><?=$this->html->a('https://scroly.io/hazaarmvc/page/api', 'API Reference'); ?></li>
                         <li class="divider"></li>
                         <li class="dropdown-header">Support</li>
                         <li><?=$this->html->a('http://git.funkynerd.com/hazaar/hazaar-mvc/issues', 'Support Issues'); ?></li>
