--- a/tests/application/views/index.phtml
+++ b/tests/application/views/index.phtml
@@ -6,7 +6,7 @@
         for building your
         own application with Hazaar MVC.</p>
 
-    <p><?=$this->html->a('http://www.hazaarmvc.com', 'Vist the Website &raquo;', ['class' => 'btn btn-primary btn-large']); ?></p>
+    <p><?=$this->html->a('http://hazaar.io', 'Vist the Website &raquo;', ['class' => 'btn btn-primary btn-large']); ?></p>
 </div>
 
 <!-- Example row of columns -->
