Resolve "Import application configurations from directory"

--- a/libs/console/application/encrypt.phtml
+++ b/libs/console/application/encrypt.phtml
@@ -9,6 +9,7 @@
                         <tr>
                             <th>Name</th>
                             <th>Size</th>
+                            <th>Writable</th>
                             <th>Encryption</th>
                         </tr>
                     </thead>
